[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "eye2bids developers"}]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "numpy",
    "pandas",
    "pyaml",
    "rich_argparse",
    "rich"
]
description = "eyetracking data bids converter in Python"
dynamic = ["version"]
license = {text = "MIT"}
name = "eye2bids"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
# A combination of dependencies useful for developers
dev = [
    "eye2bids[test,doc]",
    "isort",
    "black",
    "flake8",
    "flake8-use-fstring",
    "flake8-functions",
    "flake8-docstrings",
    'codespell',
    'tomli',
    'pre-commit'
]
# Requirements necessary for building the documentation
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinx-copybutton"
]
# For running unit and docstring tests
test = [
    "requests",
    "coverage",
    "pytest",
    "pytest-cov"
]

[project.scripts]
eye2bids = "eye2bids._cli:cli"

[tool.black]
line-length = 90

[tool.codespell]
ignore-words = ".github/codespell_ignore_words.txt"
skip = "./.git,.mypy_cache,env,venv,*/tmp,./doc/_build"

[tool.hatch.build.hooks.vcs]
version-file = "eye2bids/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["eye2bids"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 90
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "rich.*",
    "pandas",
    "pytest",
    "rich_argparse"
]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
    'tests.*'
]

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov eye2bids"
norecursedirs = "data"
testpaths = ["tests/"]
